--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <html>
 <h1>Sneff Botond weblapja</h1>
   <p> Változást csináltam</p>
-  A változtatás gyakorlása
+  <p>A változtatás gyakorlása</p>
 </html>
