--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Krém Sütibolt</title>
+    <style>
+        body{background-color: burlywood}
+        .logo{float:left; margin-left:10%}
+        .cim{color:white; font-size: 100px; padding-top:5%;}
+        nav {display: flex; flex-direction: row; justify-content: space-between; width: 80%; margin-left: 10%; margin-right: 10%; background-color: peru}
+        p{text-align: center; font-size: 20px}
+        h2{text-align: center; color:blue; font-size:30px}
+        .lent{margin-left: 30%; width:40%}
+        .tortalent{margin-left:30%; margin-right:30%; width:40%}
+        .link{font-size:30px}
+        article{background-image: url(torta.png); background-repeat: no-repeat; background-size: cover; background-attachment:fixed}
+    </style>
+</head>
+<body>
+    <header>
+        <div class="logo"><img src="logo.png" alt="asd"></div>
+        <div class="cim">Kézműves sütibolt</div>
+    </header>
+    <nav>
+        <div class="link"><a href="">Ismertető</a></div>
+        <div class="link"><a href="">Rétes</a></div>
+    </nav>
+    <article>
+        <h2>Krém kézműves Sütibolt torái és süteményei</h2>
+        <p></p>
+        <p></p>
+        <p></p>
+    </article>
+    <footer>
+        <div class="lent"><img src="elerhetoseg.png" alt="asd"></div>
+        <div class="tortalent"><img src="tortalent.png" alt="asd"></div>
+    </footer>
+</body>
+</html>
